new data files and udacity notebooks

--- a/Udacity.ipynb
+++ b/Udacity.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,10 +88,10 @@
     {
      "data": {
       "text/plain": [
-       "(20, None)"
+       "(17, 3)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,6 +170,255 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    True\n",
+      "1    True\n",
+      "2    True\n",
+      "3    True\n",
+      "dtype: bool\n",
+      "0    False\n",
+      "1    False\n",
+      "2    False\n",
+      "3    False\n",
+      "dtype: bool\n",
+      "4\n",
+      "0\n",
+      "4\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(4, 0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable_correlation(variable1, variable2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    False\n",
+      "1    False\n",
+      "2    False\n",
+      "3    False\n",
+      "dtype: bool\n",
+      "0    True\n",
+      "1    True\n",
+      "2    True\n",
+      "3    True\n",
+      "dtype: bool\n",
+      "0\n",
+      "4\n",
+      "0\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, 4)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable_correlation(variable3, variable4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def variable_correlation_answer(variable1, variable2):\n",
+    "    both_above = ((variable1 > variable1.mean()) & (variable2 > variable2.mean()))\n",
+    "    both_below = ((variable1 < variable1.mean()) & (variable2 < variable2.mean()))\n",
+    "    is_same_direction = both_above | both_below\n",
+    "    num_same_direction = is_same_direction.sum()\n",
+    "    \n",
+    "    num_different_direction = len(variable1) - num_same_direction\n",
+    "    \n",
+    "    return (num_same_direction, num_different_direction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 3)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable_correlation_answer(life_expectancy, gdp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = [\n",
+    "    'Afghanistan', 'Albania', 'Algeria', 'Angola',\n",
+    "    'Argentina', 'Armenia', 'Australia', 'Austria',\n",
+    "    'Azerbaijan', 'Bahamas', 'Bahrain', 'Bangladesh',\n",
+    "    'Barbados', 'Belarus', 'Belgium', 'Belize',\n",
+    "    'Benin', 'Bhutan', 'Bolivia', 'Bosnia and Herzegovina',\n",
+    "]\n",
+    "\n",
+    "\n",
+    "employment_values = [\n",
+    "    55.70000076,  51.40000153,  50.5       ,  75.69999695,\n",
+    "    58.40000153,  40.09999847,  61.5       ,  57.09999847,\n",
+    "    60.90000153,  66.59999847,  60.40000153,  68.09999847,\n",
+    "    66.90000153,  53.40000153,  48.59999847,  56.79999924,\n",
+    "    71.59999847,  58.40000153,  70.40000153,  41.20000076,\n",
+    "]\n",
+    "\n",
+    "# Employment data in 2007 for 20 countries\n",
+    "employment = pd.Series(employment_values, index=countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "Angola 75.69999695\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_employment(employment):\n",
+    "    '''\n",
+    "    Fill in this function to return the name of the country\n",
+    "    with the highest employment in the given employment\n",
+    "    data, and the employment in that country.\n",
+    "    '''\n",
+    "    max_country = \"\"  # Replace this with your code\n",
+    "    max_value = 0  # Replace this with your code\n",
+    "\n",
+    "\n",
+    "    for i, v in employment.iteritems():\n",
+    "        country = i\n",
+    "        country_employment = v\n",
+    "        if country_employment > max_value:\n",
+    "            max_value = country_employment\n",
+    "            max_country = country\n",
+    "    return (max_country, max_value)\n",
+    "\n",
+    "max_country, max_value = max_employment(employment)\n",
+    "print(max_country, max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_employment2(employment):\n",
+    "    print(employment.idxmax())\n",
+    "    print(employment[employment.values.argmax()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angola\n",
+      "75.69999695\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_employment2(employment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_employment3(employment):\n",
+    "    max_country = employment.idxmax()\n",
+    "    max_value = employment[employment.values.argmax()]\n",
+    "    return (max_country, max_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angola 75.69999695\n"
+     ]
+    }
+   ],
+   "source": [
+    "mc, mv = max_employment3(employment)\n",
+    "print(mc, mv)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -178,9 +427,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-sentdex-ml--fvF9258",
+   "display_name": "pandas-cookbook-nNG2axCD",
    "language": "python",
-   "name": "python-sentdex-ml--fvf9258"
+   "name": "pandas-cookbook-nng2axcd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -192,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
