update combining notebooK

--- a/Combining.ipynb
+++ b/Combining.ipynb
@@ -5630,6 +5630,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Midgrade</th>\n",
+       "      <th>Premium</th>\n",
+       "      <th>Diesel</th>\n",
+       "      <th>All Grades</th>\n",
+       "      <th>Regular</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Week</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-09-25</th>\n",
+       "      <td>2.859</td>\n",
+       "      <td>3.105</td>\n",
+       "      <td>2.788</td>\n",
+       "      <td>2.701</td>\n",
+       "      <td>2.583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-18</th>\n",
+       "      <td>2.906</td>\n",
+       "      <td>3.151</td>\n",
+       "      <td>2.791</td>\n",
+       "      <td>2.750</td>\n",
+       "      <td>2.634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-11</th>\n",
+       "      <td>2.953</td>\n",
+       "      <td>3.197</td>\n",
+       "      <td>2.802</td>\n",
+       "      <td>2.800</td>\n",
+       "      <td>2.685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-04</th>\n",
+       "      <td>2.946</td>\n",
+       "      <td>3.191</td>\n",
+       "      <td>2.758</td>\n",
+       "      <td>2.794</td>\n",
+       "      <td>2.679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-28</th>\n",
+       "      <td>2.668</td>\n",
+       "      <td>2.901</td>\n",
+       "      <td>2.605</td>\n",
+       "      <td>2.513</td>\n",
+       "      <td>2.399</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Midgrade  Premium  Diesel  All Grades  Regular\n",
+       "Week                                                      \n",
+       "2017-09-25     2.859    3.105   2.788       2.701    2.583\n",
+       "2017-09-18     2.906    3.151   2.791       2.750    2.634\n",
+       "2017-09-11     2.953    3.197   2.802       2.800    2.685\n",
+       "2017-09-04     2.946    3.191   2.758       2.794    2.679\n",
+       "2017-08-28     2.668    2.901   2.605       2.513    2.399"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gas.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(561, 5)"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gas.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
