--- a/Auto-recurring BE subscribers.ipynb
+++ b/Auto-recurring BE subscribers.ipynb
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2051,7 @@
        "All                                                                                                                                        44958"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2554,7 +2554,7 @@
        "44            itpurchasing@greenriver.edu   S918C5218970     999  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2566,7 +2566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2908,7 +2908,7 @@
        "Trepp, LLC                           David Baboo        S3A4A4356983     1200"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2919,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3277,7 +3277,7 @@
        "[225 rows x 1 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3289,7 +3289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4300,7 +4300,7 @@
        "Green River College                  Rhonda Daulton      S918C5218970            4265223  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4316,7 +4316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4333,7 +4333,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4344,7 +4344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4354,7 +4354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4558,13 +4558,113 @@
        "                                                     S1A1801ED8D4            4257650  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "be2[criteria]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "be3 = be.set_index('Nex Renewal Date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-24-5ede4b4f096b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-5ede4b4f096b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    be3.loc('2018-11-01':'2019-01-31').sort_index()\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "be3.loc('2018-11-01':'2019-01-31').sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Login ID (SSO ID)             int64\n",
+       "Master Account ID             int64\n",
+       "Invoice                      object\n",
+       "Subaccount ID                 int64\n",
+       "Monexa Order #               object\n",
+       "Plan                         object\n",
+       "Last Charge Date     datetime64[ns]\n",
+       "Charge Status                object\n",
+       "Account Status               object\n",
+       "Service Enabled              object\n",
+       "Amount                        int64\n",
+       "E-mail                       object\n",
+       "Address 1                    object\n",
+       "Address 2                    object\n",
+       "City                         object\n",
+       "State/Province               object\n",
+       "Country                      object\n",
+       "Postal/Zip                   object\n",
+       "Phone #                      object\n",
+       "Other                        object\n",
+       "AS Order #                    int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "be3.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2018-09-05', '2018-09-05', '2018-09-11', '2018-09-27',\n",
+       "               '2018-10-04', '2018-10-09', '2018-10-31', '2018-11-23',\n",
+       "               '2018-12-13', '2018-12-25', '2019-01-15', '2019-01-22',\n",
+       "               '2019-01-22', '2019-02-01', '2019-02-01', '2019-02-05',\n",
+       "               '2019-02-09', '2019-02-28', '2019-03-05', '2019-03-21',\n",
+       "               '2019-03-26', '2019-03-30', '2019-04-03', '2019-04-03',\n",
+       "               '2019-04-03', '2019-04-09', '2019-04-09', '2019-04-12',\n",
+       "               '2019-04-16', '2019-04-23', '2019-04-25', '2019-05-01',\n",
+       "               '2019-05-02', '2019-05-24', '2019-06-08', '2019-06-14',\n",
+       "               '2019-06-18', '2019-06-18', '2019-06-22', '2019-06-22',\n",
+       "               '2019-06-22', '2019-07-05', '2019-07-09', '2019-07-16',\n",
+       "               '2019-07-30'],\n",
+       "              dtype='datetime64[ns]', name='Nex Renewal Date', freq=None)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "be3.index"
    ]
   },
   {
