add visualization notebook

--- a/Auto-recurring BE subscribers.ipynb
+++ b/Auto-recurring BE subscribers.ipynb
@@ -4569,7 +4569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4578,91 +4578,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-24-5ede4b4f096b>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-5ede4b4f096b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    be3.loc('2018-11-01':'2019-01-31').sort_index()\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "be3.loc('2018-11-01':'2019-01-31').sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Login ID (SSO ID)</th>\n",
+       "      <th>Master Account ID</th>\n",
+       "      <th>Invoice</th>\n",
+       "      <th>Subaccount ID</th>\n",
+       "      <th>Monexa Order #</th>\n",
+       "      <th>Plan</th>\n",
+       "      <th>Last Charge Date</th>\n",
+       "      <th>Charge Status</th>\n",
+       "      <th>Account Status</th>\n",
+       "      <th>Service Enabled</th>\n",
+       "      <th>...</th>\n",
+       "      <th>E-mail</th>\n",
+       "      <th>Address 1</th>\n",
+       "      <th>Address 2</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State/Province</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Postal/Zip</th>\n",
+       "      <th>Phone #</th>\n",
+       "      <th>Other</th>\n",
+       "      <th>AS Order #</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nex Renewal Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-11-23</th>\n",
+       "      <td>4276870</td>\n",
+       "      <td>5931768</td>\n",
+       "      <td>12 Month Service ActivePython Business Edition</td>\n",
+       "      <td>5931770</td>\n",
+       "      <td>fce95d755166df53946ff15377bcb41f1ba904ff</td>\n",
+       "      <td>ActiveState Services</td>\n",
+       "      <td>2017-11-23</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>Enabled</td>\n",
+       "      <td>ActivePython Business Edition</td>\n",
+       "      <td>...</td>\n",
+       "      <td>david@trepp.com</td>\n",
+       "      <td>362 Durie Ave</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Closter</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>07624</td>\n",
+       "      <td>2123296179</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>602609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-13</th>\n",
+       "      <td>4203507</td>\n",
+       "      <td>1282527</td>\n",
+       "      <td>12 Month Service ActivePerl Business Edition</td>\n",
+       "      <td>5967382</td>\n",
+       "      <td>1fd72563fc21345a383fea75e06bc42490936b8a</td>\n",
+       "      <td>ActiveState Services</td>\n",
+       "      <td>2017-12-13</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>Enabled</td>\n",
+       "      <td>ActivePerl Business Edition</td>\n",
+       "      <td>...</td>\n",
+       "      <td>vasudev.nayak@symphonysummit.com</td>\n",
+       "      <td>J 905, Brigade Metropolis</td>\n",
+       "      <td>Mahadevapura</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>India</td>\n",
+       "      <td>560048</td>\n",
+       "      <td>9845466443</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>602805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-25</th>\n",
+       "      <td>4226892</td>\n",
+       "      <td>1220727</td>\n",
+       "      <td>12 Month Service ActivePerl Business Edition</td>\n",
+       "      <td>1220730</td>\n",
+       "      <td>cac6256267e4d3307269b7f31bd01be17cd67763</td>\n",
+       "      <td>ActiveState Services</td>\n",
+       "      <td>2017-12-25</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>Enabled</td>\n",
+       "      <td>ActivePerl Business Edition</td>\n",
+       "      <td>...</td>\n",
+       "      <td>eno@aquent.com</td>\n",
+       "      <td>1109 N 36th St</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Seattle</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>98103</td>\n",
+       "      <td>206-883-2888</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>602889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-15</th>\n",
+       "      <td>4257316</td>\n",
+       "      <td>4379425</td>\n",
+       "      <td>12 Month Service ActivePerl Business Edition</td>\n",
+       "      <td>6023819</td>\n",
+       "      <td>a7e9b55f7f4fb36aa96304fdf4e5804e50e79736</td>\n",
+       "      <td>ActiveState Services</td>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>Enabled</td>\n",
+       "      <td>ActivePerl Business Edition</td>\n",
+       "      <td>...</td>\n",
+       "      <td>terence.yuen@brother.com.au</td>\n",
+       "      <td>Suite 1, Level 3, Building A, 11 Talavera Roa</td>\n",
+       "      <td>Macquarie Park</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2113</td>\n",
+       "      <td>0288756235</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>603018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-22</th>\n",
+       "      <td>4257650</td>\n",
+       "      <td>4441163</td>\n",
+       "      <td>12 Month Service ActivePerl Business Edition</td>\n",
+       "      <td>6052194</td>\n",
+       "      <td>60068d3316f9155329213603cdb8f78c8ed1d880</td>\n",
+       "      <td>ActiveState Services</td>\n",
+       "      <td>2018-01-22</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>Enabled</td>\n",
+       "      <td>ActivePerl Business Edition</td>\n",
+       "      <td>...</td>\n",
+       "      <td>clark.wilson@barrachd.com</td>\n",
+       "      <td>10 Lochside Place</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Edinburgh</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>EH12 9RG</td>\n",
+       "      <td>07975798815</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>603076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-22</th>\n",
+       "      <td>4257650</td>\n",
+       "      <td>4441163</td>\n",
+       "      <td>12 Month Service ActivePerl Business Edition</td>\n",
+       "      <td>6052195</td>\n",
+       "      <td>a462ef2d932210eea6d1a137a70d8fdb3ed5ce9c</td>\n",
+       "      <td>ActiveState Services</td>\n",
+       "      <td>2018-01-22</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>Enabled</td>\n",
+       "      <td>ActivePerl Business Edition</td>\n",
+       "      <td>...</td>\n",
+       "      <td>clark.wilson@barrachd.com</td>\n",
+       "      <td>10 Lochside Place</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Edinburgh</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>EH12 9RG</td>\n",
+       "      <td>07975798815</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>603076</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6 rows × 21 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Login ID (SSO ID)             int64\n",
-       "Master Account ID             int64\n",
-       "Invoice                      object\n",
-       "Subaccount ID                 int64\n",
-       "Monexa Order #               object\n",
-       "Plan                         object\n",
-       "Last Charge Date     datetime64[ns]\n",
-       "Charge Status                object\n",
-       "Account Status               object\n",
-       "Service Enabled              object\n",
-       "Amount                        int64\n",
-       "E-mail                       object\n",
-       "Address 1                    object\n",
-       "Address 2                    object\n",
-       "City                         object\n",
-       "State/Province               object\n",
-       "Country                      object\n",
-       "Postal/Zip                   object\n",
-       "Phone #                      object\n",
-       "Other                        object\n",
-       "AS Order #                    int64\n",
-       "dtype: object"
+       "                  Login ID (SSO ID)  Master Account ID  \\\n",
+       "Nex Renewal Date                                         \n",
+       "2018-11-23                  4276870            5931768   \n",
+       "2018-12-13                  4203507            1282527   \n",
+       "2018-12-25                  4226892            1220727   \n",
+       "2019-01-15                  4257316            4379425   \n",
+       "2019-01-22                  4257650            4441163   \n",
+       "2019-01-22                  4257650            4441163   \n",
+       "\n",
+       "                                                         Invoice  \\\n",
+       "Nex Renewal Date                                                   \n",
+       "2018-11-23        12 Month Service ActivePython Business Edition   \n",
+       "2018-12-13          12 Month Service ActivePerl Business Edition   \n",
+       "2018-12-25          12 Month Service ActivePerl Business Edition   \n",
+       "2019-01-15          12 Month Service ActivePerl Business Edition   \n",
+       "2019-01-22          12 Month Service ActivePerl Business Edition   \n",
+       "2019-01-22          12 Month Service ActivePerl Business Edition   \n",
+       "\n",
+       "                  Subaccount ID                            Monexa Order #  \\\n",
+       "Nex Renewal Date                                                            \n",
+       "2018-11-23              5931770  fce95d755166df53946ff15377bcb41f1ba904ff   \n",
+       "2018-12-13              5967382  1fd72563fc21345a383fea75e06bc42490936b8a   \n",
+       "2018-12-25              1220730  cac6256267e4d3307269b7f31bd01be17cd67763   \n",
+       "2019-01-15              6023819  a7e9b55f7f4fb36aa96304fdf4e5804e50e79736   \n",
+       "2019-01-22              6052194  60068d3316f9155329213603cdb8f78c8ed1d880   \n",
+       "2019-01-22              6052195  a462ef2d932210eea6d1a137a70d8fdb3ed5ce9c   \n",
+       "\n",
+       "                                  Plan Last Charge Date Charge Status  \\\n",
+       "Nex Renewal Date                                                        \n",
+       "2018-11-23        ActiveState Services       2017-11-23    successful   \n",
+       "2018-12-13        ActiveState Services       2017-12-13    successful   \n",
+       "2018-12-25        ActiveState Services       2017-12-25    successful   \n",
+       "2019-01-15        ActiveState Services       2018-01-15    successful   \n",
+       "2019-01-22        ActiveState Services       2018-01-22    successful   \n",
+       "2019-01-22        ActiveState Services       2018-01-22    successful   \n",
+       "\n",
+       "                 Account Status                Service Enabled    ...      \\\n",
+       "Nex Renewal Date                                                  ...       \n",
+       "2018-11-23              Enabled  ActivePython Business Edition    ...       \n",
+       "2018-12-13              Enabled    ActivePerl Business Edition    ...       \n",
+       "2018-12-25              Enabled    ActivePerl Business Edition    ...       \n",
+       "2019-01-15              Enabled    ActivePerl Business Edition    ...       \n",
+       "2019-01-22              Enabled    ActivePerl Business Edition    ...       \n",
+       "2019-01-22              Enabled    ActivePerl Business Edition    ...       \n",
+       "\n",
+       "                                            E-mail  \\\n",
+       "Nex Renewal Date                                     \n",
+       "2018-11-23                         david@trepp.com   \n",
+       "2018-12-13        vasudev.nayak@symphonysummit.com   \n",
+       "2018-12-25                          eno@aquent.com   \n",
+       "2019-01-15             terence.yuen@brother.com.au   \n",
+       "2019-01-22               clark.wilson@barrachd.com   \n",
+       "2019-01-22               clark.wilson@barrachd.com   \n",
+       "\n",
+       "                                                      Address 1  \\\n",
+       "Nex Renewal Date                                                  \n",
+       "2018-11-23                                        362 Durie Ave   \n",
+       "2018-12-13                            J 905, Brigade Metropolis   \n",
+       "2018-12-25                                       1109 N 36th St   \n",
+       "2019-01-15        Suite 1, Level 3, Building A, 11 Talavera Roa   \n",
+       "2019-01-22                                    10 Lochside Place   \n",
+       "2019-01-22                                    10 Lochside Place   \n",
+       "\n",
+       "                       Address 2       City State/Province         Country  \\\n",
+       "Nex Renewal Date                                                             \n",
+       "2018-11-23                   NaN    Closter     New Jersey   United States   \n",
+       "2018-12-13          Mahadevapura  Bangalore            NaN           India   \n",
+       "2018-12-25                   NaN    Seattle     Washington   United States   \n",
+       "2019-01-15        Macquarie Park        NaN            NaN       Australia   \n",
+       "2019-01-22                   NaN  Edinburgh            NaN  United Kingdom   \n",
+       "2019-01-22                   NaN  Edinburgh            NaN  United Kingdom   \n",
+       "\n",
+       "                 Postal/Zip       Phone # Other AS Order #  \n",
+       "Nex Renewal Date                                            \n",
+       "2018-11-23            07624    2123296179   NaN     602609  \n",
+       "2018-12-13           560048    9845466443   NaN     602805  \n",
+       "2018-12-25            98103  206-883-2888   NaN     602889  \n",
+       "2019-01-15             2113    0288756235   NaN     603018  \n",
+       "2019-01-22         EH12 9RG   07975798815   NaN     603076  \n",
+       "2019-01-22         EH12 9RG   07975798815   NaN     603076  \n",
+       "\n",
+       "[6 rows x 21 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "be3.loc['2018-11-23':'2019-01-22'].sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "be3.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex(['2018-09-05', '2018-09-05', '2018-09-11', '2018-09-27',\n",
-       "               '2018-10-04', '2018-10-09', '2018-10-31', '2018-11-23',\n",
-       "               '2018-12-13', '2018-12-25', '2019-01-15', '2019-01-22',\n",
-       "               '2019-01-22', '2019-02-01', '2019-02-01', '2019-02-05',\n",
-       "               '2019-02-09', '2019-02-28', '2019-03-05', '2019-03-21',\n",
-       "               '2019-03-26', '2019-03-30', '2019-04-03', '2019-04-03',\n",
-       "               '2019-04-03', '2019-04-09', '2019-04-09', '2019-04-12',\n",
-       "               '2019-04-16', '2019-04-23', '2019-04-25', '2019-05-01',\n",
-       "               '2019-05-02', '2019-05-24', '2019-06-08', '2019-06-14',\n",
-       "               '2019-06-18', '2019-06-18', '2019-06-22', '2019-06-22',\n",
-       "               '2019-06-22', '2019-07-05', '2019-07-09', '2019-07-16',\n",
-       "               '2019-07-30'],\n",
-       "              dtype='datetime64[ns]', name='Nex Renewal Date', freq=None)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "be3.index"
    ]
